Deployments/Istio/nginx-app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: nginx-deploy
  name: nginx-deploy-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deploy
      version: v2
  strategy: {}
  template:
    metadata:      
      labels:
        app: nginx-deploy
        version: v2
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
