Deployments/Istio/nginx-app-v1.yaml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: nginx-deploy-cm
# data:
#  nginx.conf: |-
#     events {}
#     http {
#         server {
#           listen 80;
#           location / {
#               proxy_pass http://$host
#               return 200;
#           }
#         }
#     }

---
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: nginx-deploy
  name: nginx-deploy-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deploy
      version: v1
  strategy: {}
  template:
    metadata:      
      labels:
        app: nginx-deploy
        version: v1
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        ports:
        - containerPort: 80
      #   volumeMounts:
      #   - name: nginx-conf
      #     mountPath: /etc/nginx/nginx.conf
      #     subPath: nginx.conf
      # volumes:
      # - name: nginx-conf
      #   configMap:
      #     name: nginx-deploy-cm

---
apiVersion: v1
kind: Service
metadata:  
  labels:
    app: nginx-deploy
    service: nginx-svc
  name: nginx-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deploy    
  type: ClusterIP
