Deployments/Istio/aksauto-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfoapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    # - "bookinfoapp.internal.wkshpdev.com"
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfoapp-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - bookinfoapp-gateway
  http:
  - match:
    - uri:
        exact: /product
    rewrite:
      uri: /productpage  
    route:
    - destination:
        host: productpage
        port:
          number: 9080
  - match:  
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products           
    route:
    - destination:
        host: productpage
        port:
          number: 9080                  
  - match:
    - uri:
        exact: /nginx
    rewrite:
      uri: /
    route:
    - destination:
        host: nginx-svc
        subset: v1
        port:
          number: 80
      weight: 50
    - destination:
        host: nginx-svc
        subset: v2
        port:
          number: 80
      weight: 50
  - match:
    - uri:
        prefix: /httpbin
    rewrite:
      uri: /
    route:
    - destination:
        host: httpbin
        port:
          number: 8000
